# Lolit

./: .gitignore  CLAUDE.md  EADME.md  Makefile  README.md  drive.html  spec.md
docs/: setup.md
kicad-plugin/: .gitignore  README.md  pyproject.toml
kicad-plugin/lolit_kicad_plugin/: __init__.py  cli.py  diff.py  metadata.py
lolit-server/: .gitignore  go.mod  go.sum  main.go
lolit-server/internal/api/: api.go  auth.go  repos.go  upload.go  upload_test.go  versions.go  versions_test.go
lolit-server/internal/auth/: auth.go  auth_test.go
lolit-server/internal/config/: config.go
lolit-server/internal/db/: db.go  db_test.go
lolit-server/internal/gitutil/: gitutil.go  gitutil_test.go  lfs.go  lfs_test.go
lolit-server/internal/search/: search.go
lolit-server/internal/webhook/: webhook.go  webhook_test.go
lolit-server/internal/ws/: ws.go
lolit-server/web/webui/static/: app.css  app.js
lolit-server/web/webui/templates/: index.html
rv/: .gitignore  auth.go  go.mod  main.go  main_test.go
solidworks-addin/: .gitignore  LolitSolidWorksAddin.csproj  README.md
solidworks-addin/LolitSolidWorksAddin/: GitHelper.cs  HistoryDialog.cs  LoginDialog.cs  LolitAddIn.cs  LolitClient.cs  LolitCredentials.cs  TextInputDialog.cs
solidworks-addin/LolitSolidWorksAddin/Properties/: launchSettings.json
